# BackupAutomation

./: .gitignore  LICENSE  README.md  backup_automation.py  playbook.py  playbook_format.py  playbook_steps.py  pyproject.toml  restic.py  restic_automation.py  restic_exception.py  restic_playbook.py  restic_playbook_format.py  restic_playbook_parser.py  restic_playbook_step_parser.py  restic_playbook_steps.py  restic_repository.py  temporary_environment_variable_setter.py
.github/workflows/: static-checks.yml
playbooks/: restic_playbook.json.example
source/: backup_backend_factory.py  playbook_parser.py  restic_playbook_exception.py  restic_playbook_parser.py
source/backup_automation/: __main__.py  backend.py  backup_backend.py  backup_backend_factory.py  json_config.py  playbook.py  playbook_exception.py  playbook_format.py  playbook_parser.py  playbook_parser_factory.py  playbook_steps.py  prompt_credential_provider.py  restic.py  restic_backend.py  restic_playbook.py  restic_playbook_format.py  restic_playbook_parser.py  restic_playbook_step_parser.py  restic_playbook_steps.py  restic_repository.py  temporary_environment_variables.py  typehints.py  utility.py
source/backup_automation/restic/: restic_backend.py  restic_exception.py  restic_playbook.py  restic_playbook_exception.py  restic_playbook_format.py  restic_playbook_parser.py  restic_playbook_step_parser.py  restic_playbook_steps.py  restic_repository.py
